[package]
name    = "catena-4610"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

[dependencies]
cmwx1zzabz = { git = "https://github.com/lthiery/cmwx1zzabz-rs.git", branch = "master"}

[dependencies.stm32l0xx-hal]
git                    = "https://github.com/stm32-rs/stm32l0xx-hal.git"
features               = ["stm32l0x2","rt"]
branch                 = "master"
version                = "0.4.0"

[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"
longfi-device = { git = "https://github.com/helium/longfi-device-rs.git", branch = "master"}

[dev-dependencies.cortex-m-rtfm]
git = "https://github.com/rtfm-rs/cortex-m-rtfm.git"
rev = "3830638"

[dev-dependencies.stm32-usbd]
version = "0.5.0"
features = ["ram_access_2x16"]


[profile.dev]
opt-level = "s"

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
