[package]
name    = "catena-4610"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

[dependencies]
cmwx1zzabz = { git = "https://github.com/jonas-schievink/cmwx1zzabz-rs.git", branch = "depupdate" }

[dependencies.stm32l0xx-hal]
version  = "0.5.0"
features = ["stm32l0x2","rt"]


[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"
cortex-m-rtfm = "0.5.1"
stm32-usbd  = "0.5.0"
longfi-device = { git = "https://github.com/helium/longfi-device-rs.git", branch = "master"}

[dev-dependencies.stm32l0xx-hal]
version  = "0.5.0"
features = ["stm32-usbd"]


[profile.dev]
opt-level = "s"

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"
